# vsql-boolean

./: AGENTS.md  CMakeLists.txt  README.md  TESTING.md  build.sh  manifest.json
.github/workflows/: ci.yml
cmake/: FindVillageSQL.cmake
mysql-test/r/: boolean_basic.result
mysql-test/t/: boolean_basic.test
src/: hello.cc  vsql_boolean.cc
